URL, ISSN + English name for SFdS

--- a/published-202306-sanou-multiscale_glasso.qmd
+++ b/published-202306-sanou-multiscale_glasso.qmd
@@ -50,9 +50,10 @@ citation:
   type: article-journal
   container-title: "Computo"
   doi: "10.57750/1f4p-7955"
-  url: https://computo.sfds.asso.fr/published-202306-sanou-multiscale_glasso
-  publisher: "Société Française de Statistique"
+  publisher: "French Statistical Society"
   issn: "2824-7795"
+  pdf-url: "https://computo.sfds.asso.fr/published-202306-sanou-multiscale_glasso/published-202306-sanou-multiscale_glasso.pdf"
+  url: "https://computo.sfds.asso.fr/published-202306-sanou-multiscale_glasso/"
 google-scholar: true
 bibliography: references.bib
 github-user: computorg
